--- a/style.css
+++ b/style.css
@@ -18,3 +18,68 @@
 .bg-red {
   background: #f15b43;
 }
+
+.intro-bg {
+  background-image: url("img/bg4.jpeg");
+  background-size: cover;
+  background-position-x: left;
+}
+
+.intro-bg2 {
+  background-image: url("img/bg.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg3 {
+  background-image: url("img/bg2.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg4 {
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url("img/bg4.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg5 {
+  background-image: url("img/bg5.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg6 {
+  background-image: url("img/bg6.png");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg7 {
+  background-image: url("img/bg7.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg8 {
+  background-image: url("img/bg8.jpeg");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.intro-bg9 {
+  background-image: url("img/bg1.png");
+  background-size: cover;
+  background-position-x: center;
+}
+
+.h-half {
+  height: 350px;
+}
+
+.rounded-btn {
+  border-radius: 3em;
+  border: 1px solid white;
+  padding: .8em 2.2em;
+  text-transform: uppercase;
+}
