--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav li {
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, .9), rgba(255, 255, 255, .9)), url("img/bg4.jpeg");
   background-size: cover;
   background-position-x: center;
+  height: 700px;
 }
 
 .intro-bg5 {
@@ -85,9 +86,35 @@ nav li {
   height: 350px;
 }
 
+.h-full,
+.h-full2 {
+  height: 700px;
+}
+
 .rounded-btn {
   border-radius: 3em;
   border: 1px solid white;
   padding: .8em 2.2em;
   text-transform: uppercase;
+}
+
+@media only screen and (max-width: 1200px) {
+  .intro-bg4 .p-5,
+  .intro-half .p-5 {
+    padding: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .turn-to-columns .d-flex {
+    flex-direction: column !important;
+  }
+
+  .turn-to-columns .w-50 {
+    width: 100% !important;
+  }
+
+  .b-g .h-full {
+    height: 400px;
+  }
 }
