change colors, add live link

--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ nav li {
 }
 
 .bg-light-green {
-  background: #65cabc;
+  background: #85c226;
 }
 
 .bg-red {
-  background: #f15b43;
+  background: #008000;
 }
 
 .footer-bg {
